--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "vue": "^2.5.21"
+  },
   "devDependencies": {
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
